@@ -6,19 +6,15 @@ import com.webapp.comparar.dto.BuscarProductosRequest;
 import com.webapp.comparar.dto.IngredienteEncontrado;
 import com.webapp.comparar.service.ChatbotService;
 import com.webapp.comparar.service.ChatbotProductosService;
+
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.*;
-import org.springframework.web.context.request.RequestContextHolder;
-import org.springframework.web.context.request.ServletRequestAttributes;
 import org.springframework.web.servlet.mvc.method.annotation.SseEmitter;
 
 import java.util.List;
-import java.util.Timer;
-import java.util.TimerTask;
 import java.util.concurrent.CompletableFuture;
 
 @RestController
@@ -31,138 +27,77 @@ public class ChatbotController {
     @Autowired
     private ChatbotProductosService chatbotProductosService;
 
+    // ========================================================
+    // 🔥 SSE ENDPOINT — funcionando en Railway sin 401
+    // ========================================================
     @GetMapping(value = "/consulta-stream", produces = MediaType.TEXT_EVENT_STREAM_VALUE)
     public SseEmitter consultarRecetaConStreaming(
             @RequestParam String mensaje,
             @RequestHeader(value = "Authorization", required = false) String authHeader,
             HttpServletResponse response) {
 
-        System.out.println("🎯 CHATBOT SSE INICIADO — mensaje: " + mensaje);
+        System.out.println("🎯 SSE ACCEDIDO → " + mensaje);
 
-        // Necesario para SSE en Railway
         response.setHeader("Cache-Control", "no-cache");
         response.setHeader("Connection", "keep-alive");
         response.setHeader("X-Accel-Buffering", "no");
-        response.setHeader("Content-Type", "text/event-stream");
 
-        // Timeout infinito
-        SseEmitter emitter = new SseEmitter(0L);
+        // Importante: timeout alto para evitar desconexión Railway
+        SseEmitter emitter = new SseEmitter(1000L * 90); // 90 segundos
 
-        boolean isAuthenticated =
-                authHeader != null && authHeader.startsWith("Bearer ");
+        boolean isAuthenticated = authHeader != null && authHeader.startsWith("Bearer ");
 
-        // ⏱ HEARTBEAT — Railway MATA SSE sin esto
-        Timer heartbeat = new Timer(true);
-        heartbeat.scheduleAtFixedRate(new TimerTask() {
-            @Override
-            public void run() {
-                try {
-                    emitter.send(SseEmitter.event()
-                            .name("ping")
-                            .data("💓")
-                    );
-                } catch (Exception e) {
-                    heartbeat.cancel();
-                }
-            }
-        }, 0, 700); // <— enviar algo ANTES del primer segundo
-
-        // Ejecutar Gemini async
         CompletableFuture.runAsync(() -> {
             try {
-
-                // EVENTO INICIAL INMEDIATO — CLAVE PARA QUE NO HAYA 401
-                emitter.send(SseEmitter.event()
-                        .name("inicio")
-                        .data("Procesando tu consulta...")
-                );
-
-                chatbotService.obtenerRespuestaConStreaming(
-                        mensaje,
-                        isAuthenticated,
-                        emitter
-                );
-
+                chatbotService.streamReceta(mensaje, isAuthenticated, emitter);
             } catch (Exception e) {
-                try {
-                    emitter.send(SseEmitter.event()
-                            .name("error")
-                            .data("Error interno")
-                    );
-                } catch (Exception ignored) {}
-            } finally {
-                heartbeat.cancel();
-                emitter.complete();
+                System.out.println("❌ Error SSE: " + e.getMessage());
+                emitter.completeWithError(e);
             }
         });
 
         return emitter;
     }
 
-
+    // ========================================================
     @PostMapping("/consulta")
     public ResponseEntity<ChatbotResponse> consultarRecetaConProductos(
             @RequestBody ChatbotRequest request,
             @RequestHeader(value = "Authorization", required = false) String authHeader) {
 
-        try {
-            boolean isAuthenticated = authHeader != null && authHeader.startsWith("Bearer ");
+        boolean isAuthenticated = authHeader != null && authHeader.startsWith("Bearer ");
 
-            ChatbotResponse response = chatbotService.obtenerRespuestaIAPlusProductos(
-                    request.getMensaje(),
-                    isAuthenticated
-            );
+        ChatbotResponse response = chatbotService.obtenerRespuestaIAPlusProductos(
+                request.getMensaje(), isAuthenticated
+        );
 
-            return ResponseEntity.ok(response);
-
-        } catch (Exception e) {
-            ChatbotResponse errorResponse = new ChatbotResponse(
-                    "Lo siento, hubo un problema al procesar tu consulta o buscar productos. Por favor, intenta de nuevo."
-            );
-            return ResponseEntity.status(500).body(errorResponse);
-        }
+        return ResponseEntity.ok(response);
     }
 
+    // ========================================================
     @PostMapping("/solo-receta")
     public ResponseEntity<ChatbotResponse> consultarSoloReceta(
             @RequestBody ChatbotRequest request,
             @RequestHeader(value = "Authorization", required = false) String authHeader) {
 
-        try {
-            boolean isAuthenticated = authHeader != null && authHeader.startsWith("Bearer ");
+        boolean isAuthenticated = authHeader != null && authHeader.startsWith("Bearer ");
 
-            String respuesta = chatbotService.obtenerRespuestaIA(request.getMensaje(), isAuthenticated);
+        String receta = chatbotService.generarReceta(request.getMensaje(), isAuthenticated);
 
-            ChatbotResponse response = new ChatbotResponse(respuesta);
-            return ResponseEntity.ok(response);
-
-        } catch (Exception e) {
-            ChatbotResponse errorResponse = new ChatbotResponse(
-                    "Lo siento, hubo un problema al procesar tu consulta. Por favor, intenta de nuevo."
-            );
-            return ResponseEntity.status(500).body(errorResponse);
-        }
+        return ResponseEntity.ok(new ChatbotResponse(receta));
     }
 
+    // ========================================================
     @PostMapping("/buscar-productos")
     public ResponseEntity<ChatbotResponse> buscarProductosDeReceta(
-            @RequestBody BuscarProductosRequest request,
-            @RequestHeader(value = "Authorization", required = false) String authHeader) {
+            @RequestBody BuscarProductosRequest request) {
 
-        try {
-            if (request.getReceta() == null || request.getReceta().trim().isEmpty()) {
-                return ResponseEntity.badRequest().build();
-            }
-
-            List<IngredienteEncontrado> productos = chatbotProductosService.buscarProductosPorReceta(request.getReceta());
-
-            return ResponseEntity.ok(new ChatbotResponse("", productos));
-
-        } catch (Exception e) {
-            ChatbotResponse errorResponse = new ChatbotResponse(
-                    "Lo siento, hubo un problema al buscar productos."
-            );
-            return ResponseEntity.status(500).body(errorResponse);
+        if (request.getReceta() == null || request.getReceta().isBlank()) {
+            return ResponseEntity.badRequest().build();
         }
+
+        List<IngredienteEncontrado> productos = chatbotProductosService.buscarProductosPorReceta(request.getReceta());
+
+        return ResponseEntity.ok(new ChatbotResponse("", productos));
     }
 }
